force-app/main/default/objects/aos_Animal_Score__c/aos_Animal_Score__c.object-meta.xml
<CustomObject>
    <description>Tracks Medical and Behavioural Scores</description>
    <label>Animal Score</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Animal Score ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Score</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>