force-app/main/default/objects/aos_Animal_Score__c/fields/aos_Animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Animal Score</relationshipLabel>
    <relationshipName>aos_Animal_Score</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>