force-app/main/default/objects/aos_Animal_Score__c/validationRules/aos_Behavioural_Score_Applied_At_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>aos_Behavioural_Score_Applied_At_Req</fullName>
    <active>false</active>
    <description>If Behaviour Score is changed or updated, then Behavioural Score Applied At is required.</description>
    <errorConditionFormula>ISPICKVAL(aos_Behavioural_Score_Applied_At__c, &quot;&quot;) &amp;&amp; NOT(ISPICKVAL(aos_Behavioural_Score__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>aos_Behavioural_Score_Applied_At__c</errorDisplayField>
    <errorMessage>Please select Behavioural Score Applies At</errorMessage>
</ValidationRule>